Remove 'Mahi' alias from header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="content">
       <div class="header">
         <div>
-          <h1>Markus "Mahi" Meskanen</h1>
+          <h1>Markus Meskanen</h1>
           <p>
             Senior Software Engineer at
             <a href="https://plugit.fi/">Plugit Finland Oy</a>
