Update index.html for new Reaktor career

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="content">
       <div class="header">
         <div>
-          <h1>Markus Meskanen</h1>
+          <h1>Markus "Mahi" Meskanen</h1>
           <p>
-            Senior Software Engineer at
-            <a href="https://plugit.fi/">Plugit Finland Oy</a>
+            Software Developer at
+            <a href="https://www.reaktor.com/">Reaktor</a>
           </p>
         </div>
       </div>
