Add a missing bullet point dash

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
       <div class="contact">
         <h3>Contact</h3>
         <address>
-          <a href="mailto:markus.meskanen@mahi.fi">markus.meskanen@mahi.fi</a>
+          - <a href="mailto:markus.meskanen@mahi.fi">markus.meskanen@mahi.fi</a>
         </address>
-        <span>- <a href="https://github.com/Mahi">GitHub</a></span>
+        <span>
+          - <a href="https://github.com/Mahi">GitHub</a>
+        </span>
         <span>
           - <a href="https://www.linkedin.com/in/markus-meskanen/">LinkedIn</a>
         </span>
@@ -40,8 +42,7 @@
       <div class="piop">
         <h3>PIOP! the Puzzle Game</h3>
         <span>
-          -
-          <a href="https://play.google.com/store/apps/details?id=fi.mahi.piop">
+          - <a href="https://play.google.com/store/apps/details?id=fi.mahi.piop">
             Play Store
           </a>
         </span>
