Update privacy-policy.html with App Store

--- a/piop/privacy-policy.html
+++ b/piop/privacy-policy.html
@@ -3,9 +3,9 @@
 <div style="white-space: pre-wrap">
 Privacy Policy for Piop
 
-Last Updated: 2024-02-24
+Last Updated: 2025-06-05
 
-This Privacy Policy governs the manner in which Piop ("Piop," "the game," "we," or "us") collects, uses, maintains, and discloses information collected from users ("you" or "the user") of the Piop game application available on the Google Play Store. This Privacy Policy applies to the Piop game application and all related services provided by Mahi ("the developer", "mahi.fi").
+This Privacy Policy governs the manner in which Piop ("Piop," "the game," "we," or "us") collects, uses, maintains, and discloses information collected from users ("you" or "the user") of the Piop game application available on the Google Play Store and Apple App Store. This Privacy Policy applies to the Piop game application and all related services provided by Mahi ("the developer", "mahi.fi").
 
 1.Information We Collect
 
@@ -33,7 +33,7 @@ Piop does not knowingly collect any personal information from children under the
 We may update this Privacy Policy from time to time. It is your responsibility to review this page periodically for any changes. We will notify you of any significant changes by updating the "Last Updated" date at the top of this Privacy Policy. By continuing to use Piop after any modifications, you acknowledge and agree to the updated Privacy Policy.
 
 7. Contact Us
-If you have any questions or concerns about this Privacy Policy or the practices of Piop, please contact us the forms available on the Google Play Store.
+If you have any questions or concerns about this Privacy Policy or the practices of Piop, please contact us the forms available on the Google Play Store or Apple App Store.
 
 By downloading, installing, or using Piop, you signify your acceptance of this Privacy Policy. If you do not agree to this policy, please refrain from using the game.
 </div>
