Update index.html with mahiCS2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </p>
         </div>
       </div>
-      <div class="contact">
+      <div class="section">
         <h3>Contact</h3>
         <address>
           - <a href="mailto:markus.meskanen@mahi.fi">markus.meskanen@mahi.fi</a>
@@ -39,7 +39,7 @@
           - <a href="https://www.linkedin.com/in/markus-meskanen/">LinkedIn</a>
         </span>
       </div>
-      <div class="piop">
+      <div class="section">
         <h3>PIOP! the Puzzle Game</h3>
         <span>
           - <a href="https://play.google.com/store/apps/details?id=fi.mahi.piop">
@@ -47,6 +47,15 @@
           </a>
         </span>
         <span>- <a href="./piop/privacy-policy.html">Privacy Policy</a></span>
+      </div>
+      <div class="section last">
+        <h3>mahiCS2</h3>
+        <span>
+          - <a href="https://youtube.com/@mahiCS2">YouTube Channel</a>
+        </span>
+        <span>
+          - <a href="https://discord.com/invite/ZubwNfgtrn">Discord Server</a>
+        </span>
       </div>
     </div>
   </body>
