Update index.html with new smile_xs picture

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./assets/Markus1_150px.png"
+      href="./assets/smile_xs_cropped.jpg"
     />
   </head>
   <body>
     <img
       class="profile"
       alt="Profile picture of Mahi"
-      src="./assets/Markus1_150px.png"
+      src="./assets/smile_xs_cropped.jpg"
     />
     <div class="content">
       <div class="header">
