--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <span>- <a href="./piop/privacy-policy.html">Privacy Policy</a></span>
       </div>
       <div class="section last">
-        <h3>mahiCS2</h3>
+        <h3>Counter-Strike Coaching</h3>
         <span>
           - <a href="https://youtube.com/@mahiCS2">YouTube Channel</a>
         </span>
