Add width and height attrs for profile image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       class="profile"
       alt="Profile picture of Mahi"
       src="./assets/smile_xs_cropped.jpg"
+      width="176"
+      height="240"
     />
     <div class="content">
       <div class="header">
