Add App Store link for PIOP

--- a/index.html
+++ b/index.html
@@ -48,10 +48,15 @@
             Play Store
           </a>
         </span>
+        <span>
+          - <a href="https://apps.apple.com/us/app/piop-the-puzzle-game/id6746831632">
+            App Store
+          </a>
+        </span>
         <span>- <a href="./piop/privacy-policy.html">Privacy Policy</a></span>
       </div>
       <div class="section last">
-        <h3>Counter-Strike Coaching</h3>
+        <h3>Counter-Strike coaching</h3>
         <span>
           - <a href="https://youtube.com/@mahiCS2">YouTube Channel</a>
         </span>
