--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         <span>
           - <a href="https://discord.com/invite/ZubwNfgtrn">Discord Server</a>
         </span>
+        <address>
+          - <a href="mailto:cs2@mahi.fi">cs2@mahi.fi</a>
+        </address>
       </div>
     </div>
   </body>
