--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </p>
         </div>
       </div>
-      <div class="section last">
+      <div class="section">
         <h3>Contact</h3>
         <address>
           - <a href="mailto:markus.meskanen@mahi.fi">markus.meskanen@mahi.fi</a>
@@ -39,6 +39,15 @@
         </span>
         <span>
           - <a href="https://github.com/Mahi">GitHub</a>
+        </span>
+      </div>
+      <div class="section last">
+        <h3>Projects</h3>
+        <span>
+          - <i>PIOP</i> the Puzzle Game for <a href="https://play.google.com/store/apps/details?id=fi.mahi.piop">Android</a> and <a href="https://apps.apple.com/us/app/piop-the-puzzle-game/id6746831632">iOS</a>
+        </span>
+        <span>
+          - <a href="https://youtube.com/@mahiCS2">Counter-Strike Coaching Platform</a>
         </span>
       </div>
     </div>
