--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       <div class="section last">
         <h3>Projects</h3>
         <span>
-          - <i>PIOP</i> the Puzzle Game for <a href="https://play.google.com/store/apps/details?id=fi.mahi.piop">Android</a> and <a href="https://apps.apple.com/us/app/piop-the-puzzle-game/id6746831632">iOS</a>
+          - Puzzle game <i>PIOP</i> for <a href="https://play.google.com/store/apps/details?id=fi.mahi.piop">Android</a> & <a href="https://apps.apple.com/us/app/piop-the-puzzle-game/id6746831632">iOS</a>
         </span>
         <span>
-          - <a href="https://youtube.com/@mahiCS2">Counter-Strike Coaching Platform</a>
+          - <a href="https://youtube.com/@mahiCS2">Counter-Strike coaching channel</a>
         </span>
       </div>
     </div>
