Update job title and project section title

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div>
           <h1>Markus "Mahi" Meskanen</h1>
           <p>
-            Software Developer at
-            <a href="https://www.reaktor.com/">Reaktor</a>
+            CTO at
+            <a href="https://vihreaenergia.fi/">Vihreä Älyenergia</a>
           </p>
         </div>
       </div>
@@ -42,7 +42,7 @@
         </span>
       </div>
       <div class="section last">
-        <h3>Projects</h3>
+        <h3>Notable Projects</h3>
         <span>
           - Puzzle game <i>PIOP</i> for <a href="https://play.google.com/store/apps/details?id=fi.mahi.piop">Android</a> & <a href="https://apps.apple.com/us/app/piop-the-puzzle-game/id6746831632">iOS</a>
         </span>
