Update contact information and section titles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       <div class="section">
         <h3>Contact</h3>
         <address>
-          - <a href="mailto:markus.meskanen@mahi.fi">markus.meskanen@mahi.fi</a>
+          - <a href="mailto:markus.meskanen@alyenergia.fi">markus.meskanen@alyenergia.fi</a> <i>(work)</i>
+        </address>
+        <address>
+          - <a href="mailto:markus.meskanen@mahi.fi">markus.meskanen@mahi.fi</a> <i>(personal)</i>
         </address>
         <span>
           - <a href="https://www.linkedin.com/in/markus-meskanen/">LinkedIn</a>
@@ -42,7 +45,7 @@
         </span>
       </div>
       <div class="section last">
-        <h3>Notable Projects</h3>
+        <h3>Personal Projects</h3>
         <span>
           - Puzzle game <i>PIOP</i> for <a href="https://play.google.com/store/apps/details?id=fi.mahi.piop">Android</a> & <a href="https://apps.apple.com/us/app/piop-the-puzzle-game/id6746831632">iOS</a>
         </span>
